# manga-image-translator-rust

./: .gitignore  Cargo.toml  README.md
crates/base-util/: Cargo.toml
crates/base-util/src/: lib.rs  onnx.rs  project.rs
crates/interface/: Cargo.toml
crates/interface/benches/: border_bench.rs  border_center_bench.rs  gamma_correction_bench.rs  histogram_equalization_bench.rs  invert_bench.rs  remove_border_mask_bench.rs  resize_bench.rs  resize_mask_bench.rs  rotate_bench.rs  rotate_left_mask_bench.rs  textlines_bench.rs
crates/interface/src/: lib.rs
crates/interface/src/colorizer/: mod.rs
crates/interface/src/detectors/: common.rs  mod.rs  textlines.rs
crates/interface/src/detectors/modules/: craft.rs  ctd.rs  mod.rs  none.rs  paddle.rs
crates/interface/src/engine/: mod.rs
crates/interface/src/image/: cpu.rs  dummy.rs  froms.rs  mod.rs  rayon.rs
crates/interface/src/inpainter/: mod.rs
crates/interface/src/model/: mod.rs
crates/interface/src/models/: mod.rs
crates/interface/src/ocr/: mod.rs
crates/interface/src/rederer/: mod.rs
crates/interface/src/translator/: mod.rs
crates/interface/src/upcaler/: mod.rs
crates/modules/ctd/: Cargo.toml
crates/modules/dbnet/: Cargo.toml
crates/modules/dbnet/benches/: onnx_bench.rs
crates/modules/dbnet/src/: lib.rs  main.rs
crates/modules/default-renderer/: Cargo.toml
crates/modules/default-renderer/examples/: baseline_comparison.rs  baseline_test.rs  comprehensive_example.rs  image_rendering_example.rs  simple_image_example.rs  text_inpainting_demo.rs
crates/modules/default-renderer/src/: get_size.rs  image_renderer.rs  lib.rs  main.rs
crates/modules/none/: Cargo.toml
crates/modules/none/benches/: onnx_bench.rs
crates/modules/none/src/: lib.rs
crates/modules/paddle/: Cargo.toml
crates/modules/python-module/: Cargo.toml
crates/modules/python-module/src/: lib.rs
crates/modules/renderer/binary/: Cargo.toml
crates/modules/renderer/binary/src/: lib.rs
crates/modules/renderer/html/: Cargo.toml
crates/modules/renderer/html/src/: lib.rs
crates/py-bindings/: Cargo.toml  example.py  pyproject.toml
crates/py-bindings/src/: lib.rs
crates/util/: Cargo.toml
crates/util/benches/: det_arange_bench.rs  imageproc_bench.rs
crates/util/npys/: mask2_h.npy  mask2_v.npy
crates/util/src/: dbnet.rs  det_arrange.rs  imageproc.rs  lib.rs  opencv.rs
