[package]
name = "py-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
interface.workspace = true
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
dbnet.workspace = true
base-util.workspace = true

[lib]
name = "rusty_manga_mange_translator"
crate-type = ["cdylib"]
