[package]
name = "html"
version.workspace = true
edition.workspace = true

[dependencies]

v_htmlescape = "0.15.8"
binary.workspace = true
interface.workspace = true
anyhow.workspace = true
base64.workspace = true
image.workspace = true
serde_json.workspace = true
serde.workspace = true
zip.workspace = true
